# ck

./: .gitignore  .npmignore  404.html  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  README.html  README.md  UNEXPECTED.md  hashmap.json  index.html  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  ci.yml  deploy-docs.yml  docker.yml  publish-crates.yml  release.yml
assets/: README.md.Ba-MPbGI.js  README.md.Ba-MPbGI.lean.js  README.md.DVbTIFx_.js  README.md.DVbTIFx_.lean.js  README.md.GAeLdXtQ.js  README.md.GAeLdXtQ.lean.js  app.41KPR1TS.js  app.AvVy-wsZ.js  app.Bz-K8mtx.js  app.C01KlOgG.js  app.Cz2HlJmw.js  app.D2pOCW9i.js  app.SR-33ZYA.js  app.SdMfH0yZ.js  app.d79UVP4q.js  app.fKIrJCI3.js  app.p0dy3SOF.js  contributing_development.md.BDDTNU7A.js  contributing_development.md.BDDTNU7A.lean.js  contributing_development.md.CS31cCO5.js  contributing_development.md.CS31cCO5.lean.js  contributing_development.md.JM-qI9xm.js  contributing_development.md.JM-qI9xm.lean.js  contributing_release-process.md.BWVi38eI.js  contributing_release-process.md.BWVi38eI.lean.js  contributing_release-process.md.BvpM3uGq.js  contributing_release-process.md.BvpM3uGq.lean.js  contributing_release-process.md.CEcSAELL.js  contributing_release-process.md.DSas82do.js  contributing_release-process.md.DSas82do.lean.js  contributing_testing.md.BeCL8JUF.js  contributing_testing.md.BeCL8JUF.lean.js  contributing_testing.md.DPN4rMe2.js  contributing_testing.md.DPN4rMe2.lean.js  contributing_testing.md.yFiKYAUF.js  contributing_testing.md.yFiKYAUF.lean.js  features_editor-integration.md.Bf1ADwEh.js  features_editor-integration.md.Bf1ADwEh.lean.js  features_editor-integration.md.Cyza8_Co.js  features_editor-integration.md.Cyza8_Co.lean.js  (+191 more)
assets/chunks/: @localSearchIndexroot.4i5Vxf4u.js  @localSearchIndexroot.7ldyyEKO.js  @localSearchIndexroot.BL2MKM8V.js  @localSearchIndexroot.BTppLmp4.js  @localSearchIndexroot.C5V7xwko.js  @localSearchIndexroot.D0MuxJ9X.js  @localSearchIndexroot.DAbP6RWE.js  @localSearchIndexroot.DV4PxEFS.js  @localSearchIndexroot.DrdO0vxN.js  @localSearchIndexroot.EaT_H2Ib.js  @localSearchIndexroot.PkbvvtC3.js  VPLocalSearchBox.B2U__4Ml.js  VPLocalSearchBox.CVpEvD5j.js  VPLocalSearchBox.ClfJEYhT.js  VPLocalSearchBox.CmyYm1Jq.js  VPLocalSearchBox.D4SjLBZl.js  VPLocalSearchBox.D8_-jQxA.js  VPLocalSearchBox.DCBLeVsy.js  VPLocalSearchBox.DrH-6ILQ.js  VPLocalSearchBox.E3dLmk1T.js  VPLocalSearchBox.LJx6C-Pd.js  VPLocalSearchBox.jVO_kO79.js  framework.6ONF4KoZ.js  framework.CDSaARx5.js  framework.CsnIYvJb.js  theme.5D9owRrz.js  theme.BAYPdZW2.js  theme.BJl6UQo-.js  theme.BoQiOra3.js  theme.C33BcJg6.js  theme.DDQxHhCi.js  theme.Dht2XKJy.js  theme.Dn8rUVoO.js  theme.DnEn16Kv.js  theme.DxAXwNw8.js  theme.J5ddNPv2.js
benchmarks/: README.md  sync_repos.py
benchmarks/baselines/: ck.py
ck-ann/: Cargo.toml
ck-ann/src/: lib.rs
ck-chunk/: Cargo.toml
ck-chunk/examples/: debug_chunks.rs
ck-cli/: Cargo.toml
ck-cli/src/: dispatcher.rs  error.rs  lib.rs  main.rs  main_backup.rs  main_complex.rs  main_new.rs  mcp_server.rs  path_utils.rs  progress.rs
ck-cli/src/commands/: clean.rs  index.rs  inspect.rs  mod.rs  search.rs  status.rs
ck-cli/src/mcp/: cache.rs  context.rs  session.rs
ck-cli/tests/: integration_tests.rs  mcp_tests.rs
ck-core/: Cargo.toml
ck-embed/: Cargo.toml
ck-engine/: Cargo.toml
ck-engine/src/: lib.rs  semantic_v3.rs
ck-engine/test_fixtures/: test1.txt  test4.txt  word_test.txt
ck-index/: Cargo.toml
ck-index/src/: lib.rs
ck-models/: Cargo.toml
ck-tui/: Cargo.toml
ck-vscode/: .vscodeignore  package-lock.json  package.json
ck_mlx/: cli.py  embed.py  server.py
cli/: ck.js
contributing/: development.html  release-process.html  testing.html
docs/: ARCHITECTURE_IMPROVEMENTS.md  npm-distribution.md  semantic_snapshot_mock.html
docs-site/: package.json  pnpm-lock.yaml
features/: editor-integration.html  grep-compatibility.html  hybrid-search.html  mcp-integration.html  semantic-search.html  tui-mode.html
guide/: advanced-usage.html  ai-agent-setup.html  basic-usage.html  changelog.html  choosing-interface.html  faq.html  installation.html  introduction.html  limitations.html  roadmap.html
public/: AGENTS.html
recipes/: ai-workflows.html  debug-production.html  explore-codebase.html  find-auth.html  refactor-patterns.html  security-review.html
reference/: advanced.html  architecture.html  cli.html  configuration.html  models.html  output-formats.html
scripts/: install.js  test.js
(+27 files in other folders)
