[package]
name = "ck-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Search engine implementation for ck semantic search"
repository = "https://github.com/BeaconBay/ck"
keywords = ["search", "engine", "semantic"]
categories = ["algorithms"]

[dependencies]
blake3 = { workspace = true }
ck-core = { workspace = true }
ck-index = { workspace = true }
ck-embed = { workspace = true }
ck-ann = { workspace = true }
ck-chunk = { workspace = true }
ck-models = { workspace = true }
serde_json = { workspace = true }

anyhow = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }
tantivy = { workspace = true }
tokio = { workspace = true }
rayon = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
globset = { workspace = true }

[features]
default = ["fastembed", "mixedbread"]
fastembed = ["ck-embed/fastembed", "ck-index/fastembed", "ck-chunk/fastembed"]
mixedbread = ["ck-embed/mixedbread", "ck-index/mixedbread", "ck-chunk/mixedbread"]

[dev-dependencies]
tempfile = "3.27"
