[package]
name = "ck-index"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Indexing and storage for ck semantic search"
repository = "https://github.com/BeaconBay/ck"
keywords = ["indexing", "search", "storage"]
categories = ["database-implementations"]

[dependencies]
ck-core = { workspace = true }
ck-chunk = { workspace = true }
ck-embed = { workspace = true }
ck-models = { workspace = true }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
memmap2 = { workspace = true }
tokio = { workspace = true }
rayon = { workspace = true }
walkdir = { workspace = true }
fs4 = { workspace = true }
tracing = { workspace = true }
ignore = { workspace = true }
ctrlc = { workspace = true }
pdf-extract = { workspace = true }
tempfile = { workspace = true }

[features]
default = ["fastembed", "mixedbread"]
fastembed = ["ck-embed/fastembed", "ck-chunk/fastembed"]
mixedbread = ["ck-embed/mixedbread", "ck-chunk/mixedbread"]

[dev-dependencies]
serial_test = "2.0"
